--- a/DemosTest/DemosTest.csproj
+++ b/DemosTest/DemosTest.csproj
@@ -65,6 +65,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="arrayTest.html" />
+    <Content Include="arrayTest.js" />
     <Content Include="clock.js" />
     <Content Include="HtmlPage1.html" />
     <Content Include="HtmlPage2.html" />
